--- a/app/views/front/likelist/_contents-item-frame.html.erb
+++ b/app/views/front/likelist/_contents-item-frame.html.erb
@@ -1,4 +1,5 @@
 <Script>
+  $("#loading").hide();
   switcher = false;
   end_param = false;
   window.scrollTo(0,0);
@@ -16,5 +17,6 @@
 </div>
 <script>
     $(".browser-contents").attr('style','margin-top:44px;height:88%;');
+    $(".contents-loading").hide();
     $(".contents-end").hide();
 </script>
