--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -1006,6 +1006,7 @@ margin-top:90px;
       text-align:center;
       padding:1%;
       max-height:90%;
+      -webkit-overflow-scrolling: touch;
     }
     .filter-body-header>span{
       color:rgba(0,0,0,0.5);
@@ -1114,6 +1115,7 @@ margin-top:90px;
     line-height:3.1;
     width:50px;
     height:50px;
+    -webkit-overflow-scrolling: touch;
   }
 
   .color-button-clicked{
