--- a/app/views/front/items/_notibar.html.erb
+++ b/app/views/front/items/_notibar.html.erb
@@ -119,7 +119,7 @@
             if(data==="nil"){
                 $(".contents-loading").hide();
                 end_param = false;
-                $(".contents-end>span").text("상품리스트 추가 요청하기");
+                $(".contents-end>span").text("오브제 리스트 추가 요청하기");
                 $(".contents-end").show();
             }
             else{
