--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -515,6 +515,7 @@ transition: all 0.4s linear;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  border-radius:0;
   width: 100%;
   height: 100%;
   border:none;
@@ -1397,7 +1398,7 @@ margin-top:90px;
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
-  border:0.5px solid rgba(0,0,0,0.6);
+  border:0.5px solid rgba(0,0,0,0.2);
   height:100%;
 }
 .item-detail{
@@ -1428,7 +1429,7 @@ margin-top:90px;
   vertical-align: middle;
 }
 .item-detail>.outlink>div{
-  border: 1px solid grey;
+  border: 1px solid rgba(0,0,0,0.2);
   height: 80%;
   width: 70%;
   margin: auto;
